app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #  nginx.ingress.kubernetes.io/use-regex: "true"
  #  nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: users-postgres-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: / #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: users-postgres-app-service
            port: 
              number: 80
